--- a/plugins/MmsdHelpers/resources/locales/es/mmsd_helpers.po
+++ b/plugins/MmsdHelpers/resources/locales/es/mmsd_helpers.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2020-01-06 11:47-0600\n"
-"PO-Revision-Date: 2020-04-29 13:23-0500\n"
+"PO-Revision-Date: 2021-02-09 16:06-0600\n"
 "Last-Translator: \n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "Language: es\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 msgid "International phone numbers are not supported"
 msgstr "No se admiten números de teléfono internacionales"
@@ -80,3 +80,6 @@ msgstr "Cierre"
 
 msgid "Required field"
 msgstr "Campo requerido"
+
+msgid "Cancel"
+msgstr "Cancelar"
